1st challenge completed

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ptpeck357/Node.js-MySQL-#readme",
   "dependencies": {
+    "chalk": "^2.3.0",
+    "inquirer": "^4.0.1",
     "mysql": "^2.15.0"
   }
 }
