--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/ptpeck357/Node.js-MySQL-#readme",
   "dependencies": {
     "chalk": "^2.3.0",
+    "console.table": "^0.9.1",
+    "easy-table": "^1.1.0",
     "inquirer": "^4.0.1",
     "mysql": "^2.15.0"
   }
